added missed answer counter

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div id="resultBox2">False :
                 <span id="falseResults">0</span>
             </div>
+            <div id="resultBox3">Missed :
+                <span id="falseResults">0</span>
+            </div>
             
         </div>
         <div id="SkillIcon" class="wnd"></div>
