--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <span id="falseResults">0</span>
             </div>
             <div id="resultBox3">Missed :
-                <span id="falseResults">0</span>
+                <span id="missedResults">0</span>
             </div>
             
         </div>
