Added ID thingie

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             
         </div>
         <div id="SkillIcon" class="wnd"></div>
+        <div id="ID" class="wnd">ID:</div>
         <div id="bottomField">
             <div id="timerBox">
                 <div id="Timer"></div>
