--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 
 </head>
 <body>
+    <div id="StartUp">
+        <div class="wnd" style="padding-left: 15px; padding-right: 15px;">
+            <h3>Welcome to Flyff Frenzy - Trivia Takeoff!</h3>
+            <p id="desc">Flyff Frenzy is a small quiz game that tests players' knowledge of Flyff skills. <br>Players are presented with an image of a skill and four different names, and they have to click on the correct name corresponding to the skill.</p>
+            <p>This is an alpha version. See skills that shouldn't be in here? Message Nero#7295 on Discord.</p>
+            <div style="display:flex; align-items: center; justify-content: center;">
+                <div id="PlayButton" onclick="getTriviaSkill(), ShowHide()">Play Flyff Frenzy</div>
+            </div>
+            
+        </div>
+    </div>
     <div id="gameWindow">
         <div id="statWindow" class="wnd">
             <div id="resultBox">Right :
